data/derived/comb/progs/unify/prog1118.ml.out
Characters 45-61:
  let fixpoint (f,b) = wwhile(let g x = f x in (g b, (g b)!= b), b);;
                                               ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
